Add 'UIRefreshControl' to prototype to simulate async loading of the feed

--- a/Prototype/Prototype/Base.lproj/Main.storyboard
+++ b/Prototype/Prototype/Base.lproj/Main.storyboard
@@ -121,6 +121,12 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="My Feed" id="UA5-VB-zEJ"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="0CY-9j-qtT">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh" destination="0il-Dh-RAG" eventType="valueChanged" id="aAo-uK-fOP"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yi0-kc-Cuc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
